kubernetes-volumes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
  namespace: homework
  labels:
    app: homework-web
spec:
  replicas: 3
  selector:
    matchLabels:
      app: homework-web
  template:
    metadata:
      labels:
        app: homework-web
    spec:
      nodeSelector:
        homework: "true"
      volumes:
        - name: shared-volume
          persistentVolumeClaim:
            claimName: homework-pvc
        - name: nginx-config
          configMap:
            name: nginx-homework-config
        - name: homework-config-volume
          configMap:
            name: homework-config
      containers:
        - name: nginx
          image: nginx:stable-alpine
          resources:
            requests:
              memory: "256Mi"
              cpu: "200m"
            limits:
              memory: "512Mi"
              cpu: "400m"
          readinessProbe:
            httpGet:
              path: /index.html
              port: 80
              scheme: HTTP
            initialDelaySeconds: 5
            periodSeconds: 5
          volumeMounts:
            - name: shared-volume
              mountPath: /homework
            - name: nginx-config
              mountPath: /etc/nginx/conf.d/default.conf
              subPath: default.conf
            - name: homework-config-volume
              mountPath: /homework/conf
              readOnly: True
          lifecycle:
            preStop:
              exec:
                command:
                  - sh
                  - -c
                  - rm -f /homework/index.html
          ports:
            - containerPort: 80
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
